--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
                       </button>
                       <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                       </button>
-                      <a class="navbar-brand col-md-4" href="#" title="SterlingTube Home"><img src="../Sterlingtube/sterlingtube-images/sterling logo.jpg" width="30" class="d-inline-block align-top" alt="">
+                      <a class="navbar-brand row-md-6" href="#" title="SterlingTube Home"><img src="../Sterlingtube/sterlingtube-images/sterling logo.jpg" width="30" class="d-inline-block align-top" alt="">
                           <span style="font-family: 'Oswald', sans-serif;"> SterlingTube</span><sup style="font-size: 0.8rem;">NG</sup>
                           </a>
   
-                      <div class="collapse navbar-collapse  col-md-8" id="navbarSupportedContent">
-                        <form class="form-inline my-2 my-lg-0 col-md-8">
-                          <input class="form-control mr-sm-2 menu-search-box" type="search" placeholder="Search" aria-label="Search">
+                      <div class="collapse navbar-collapse  row-md-6" id="navbarSupportedContent">
+                        <form class="form-inline my-2 my-lg-0 col-md-6">
+                          <input class="form-control mr-sm-2 menu-search-box" style="margin-right: 250px;" type="search" placeholder="Search" aria-label="Search">
                           <button class="btn btn-outline-dark my-2 my-sm-0" type="submit"><i class="fas fa-search"></i></button>
                         </form>
-                          <ul class="nav navbar-nav mr-auto  col-md-4 justify-content-end">
+                          <ul class="nav navbar-nav mr-auto  col-sm-6 justify-content-end">
                             <li class="nav-item right-padding" title="Create a video and more">
                               <a href="#"><i class="fas fa-video"></i></a>
                             </li>
@@ -39,8 +39,10 @@
                               </a>
                               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item" href="#"><i class="fab fa-youtube right-padding" style="color: red;"></i> OneBank</a>
-                                <a class="dropdown-item" href="#"><i class="fab fa-youtube right-padding" style="color: red;"></i> Specta</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="C:\Users\LENOVO COREi5\Desktop\Samson programming\Sterlingtube\video.html"><i class="fab fa-youtube right-padding" style="color: red;"></i> Specta</a>
                                 <a class="dropdown-item" href="#"><i class="fab fa-youtube right-padding" style="color: red;"></i> WhatsApp BAnking</a>
+                                <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="#"><i class="fab fa-youtube right-padding" style="color: red;"></i> i-Invest</a>
                                 <a class="dropdown-item" href="#"><i class="fab fa-youtube right-padding" style="color: red;"></i> SmartBank</a>
                               </div>
